--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A free online learning platform",
   "main": "server.js",
   "scripts": {
+    "client-install": "npm install --prefix client",
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "cd client && npm start",
