--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/KarloMijaljevic/FreeMinds#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "concurrently": "^6.3.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
