--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "homepage": "https://github.com/KarloMijaljevic/FreeMinds#readme",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "concurrently": "^6.3.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
